adding new 6.0 attributes